--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Attarwij Agency delivers innovative marketing solutions to boost your business. Enhance your visibility and growth with our tailored strategies. Contact us for your online success.">
+    <meta name="keywords" content="Attarwij Agency, atarwij, Innovative marketing solutions, Business growth strategies, Marketing partner,Increase visibility,Boost business success, Online marketing services, Personalized marketing strategies, Client-focused marketing, Digital marketing expertise, Enhance online presence, Targeted marketing campaigns, Marketing consultancy, Brand growth solutions, Marketing for businesses, Marketing agency contact">
+    <meta name="author" content="Nassim Oulkaid, Bettach Nada, Omar Bouhaddach">
     <title>ATTARWIJ AGENCY</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
