--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/WhatsApp Image 2024-07-09 at 14.13.03.jpeg">
+    <meta name="description" content="Attarwij, Agency delivers innovative marketing solutions to boost your business. Enhance your visibility and growth with our tailored strategies. Contact us for your online success.">
+    <meta name="keywords" content="Attarwij Agency, atarwij, Innovative marketing solutions, Business growth strategies, Marketing partner,Increase visibility,Boost business success, Online marketing services, Personalized marketing strategies, Client-focused marketing, Digital marketing expertise, Enhance online presence, Targeted marketing campaigns, Marketing consultancy, Brand growth solutions, Marketing for businesses, Marketing agency contact">
+    <meta name="author" content="Nassim Oulkaid, Bettach Nada, Omar Bouhaddach">
     <title>ATTARWIJ AGENCY</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
@@ -62,7 +66,7 @@
             <div class="content">
                 <div class="text">
                     <section id="about">
-                    <h1><b>Notre Mission</b></h1>
+                    <h1><b>Notre Mission</b></h1><br>
                     <p><b>Attarwij Agency</b> est votre partenaire de confiance en marketing, 
                         offrant des solutions innovantes pour propulser votre entreprise vers le succès.
                         Avec une approche personnalisée et des stratégies ciblées, nous sommes déterminés à maximiser votre visibilité et à stimuler votre croissance.
