--- a/index.html
+++ b/index.html
@@ -231,36 +231,35 @@
         });
     </script>
 </div>
-    <div class="parent">    
-        <button id="init" >
-            <img src="images/chatbot.png" alt="Chat Icon">
-                bonjour comment je l'aider !
-        </button>
-    </div>
-    <div id="test" style="position: fixed;top: 4rem;right: 8rem;display: none;">
-        <div class="child" id="chatbot">
-            <div class="header">
-                <div class="h-child">
-                    <img src="images/chatbot (1).png" alt="avatar" id="avatar">
-                    <div>
-                        <span class="name">Chatbot</span>
-                        <br>
-                        <span style="color:rgb(218, 138, 18)">online</span>
-                    </div>
-                </div>
+<div class="parent">
+    <button id="init" >
+        <img src="images/chatbot.png" alt="Chat Icon">
+    </button>
+</div>
+<div id="test" style="position: fixed;top: 28rem;right: 6rem;display: none;">
+    <div class="child" id="chatbot">
+        <div class="header">
+            <div class="h-child">
+                <img src="images/chatbot (1).png" alt="avatar" id="avatar">
                 <div>
-                    <button class="refBtn"><i class="fa fa-refresh" onclick="initChat()"></i></button>
+                    <span class="name">Chatbot</span>
+                    <br>
+                    <span style="color:rgb(218, 138, 18)">online</span>
                 </div>
             </div>
-
-            <div id="chat-box">
-
-            </div>
-            <div class="footer">
-                <span style="color: rgb(218, 138, 18);">powered by @Attarwij Agency </span>
+            <div>
+                <button class="refBtn"  onclick="closeChat()"><img src="images/retirer.png" alt="" ></button>
             </div>
         </div>
+
+        <div id="chat-box">
+
+        </div>
+        <div class="footer">
+            <span style="color: rgb(218, 138, 18);">powered by @Attarwij Agency </span>
+        </div>
     </div>
+</div>
     <script src="index.js"></script>
 </body>
 </html>
