Verification of chatbot functionality across different devices completed

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <img src="images/chatbot.png" alt="Chat Icon">
     </button>
 </div>
-<div id="test" style="position: fixed;top: 6rem;right: 6rem;display: none;">
+<div id="test">
     <div class="child" id="chatbot">
         <div class="header">
             <div class="h-child">
