last update of chat bot fixing the form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
 </head>
 <body >
+<div id="content0" >
     <div id="content">
         <header>
             <div class="brand-name">  
@@ -114,7 +115,7 @@
             <p>Nous serions ravis de connaître les objectifs de votre projet. Contactez-nous dès aujourd'hui pour une 
                 <br><span class="span">PROPOSITION PERSONNALISÉE GRATUITE!</span></p>
         </section>
-        
+        </section>
     <section class="contact">
         <div class="container">
             <form id="contactForm" method="post" action="data.php">
@@ -212,6 +213,7 @@
             </nav>
         </div>
     </footer>
+
     <script>
         document.getElementById('contactForm').addEventListener('submit', function(event) {
             event.preventDefault();
@@ -265,7 +267,7 @@
 <div class="notification" id="notification">Les données ont été insérées avec succès.</div>
     <script src="index.js"></script>
 
-   
+
 
     <script type="module">
         // Import the functions you need from the SDKs you need
