--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="content">
                 <div class="text">
                     <section id="about">
-                        <h1><b>Notre Mission</b></h1><br>
+                        <h1><b>Notre Mission</b></h1><br><br><br>
                         <p><b>Attarwij Agency</b> est votre partenaire de confiance en marketing, 
                             offrant des solutions innovantes pour propulser votre entreprise vers le succès.
                             Avec une approche personnalisée et des stratégies ciblées, nous sommes déterminés à maximiser votre visibilité et à stimuler votre croissance.
