--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="#accueil">Accueil</a></li>
-                    <li><a href="#services">Services</a></li>
                     <li><a href="#travail">Travail</a></li>
-                    <li><a href="#contactez-nous">Contactez-nous</a></li>
+                    <li><a href="#servicee">Services</a></li>
+                    <li><a href="#connecte">Contactez-nous</a></li>
                 </ul>
                 <div class="search-bar">
                     <input type="text" placeholder="Recherche...">
@@ -61,7 +61,7 @@
             </div>
         </div>    
     </div>    
-    <section>
+    <section id="travail">
         <div class="background-container1">   
             <div class="content">
                 <div class="text">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <section>
+        <section id="servicee">
             <h1 class="services-title">Services</h1>
             <section id="services"> 
                 <section class="services full-width-section"> 
