--- a/services.html
+++ b/services.html
@@ -7,169 +7,91 @@
 <link rel="stylesheet" href="services.css">
 <link rel="stylesheet" href="index2.css">
 <title>Nos Services</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-    }
-    .service {
-        margin-bottom: 20px;
-    }
-    .service h2 {
-        color: #333;
-    }
-    .service p {
-        margin: 5px 0;
-    }
-</style>
 </head>
 <body>
     <div id="content">
         <header id="header">
-            <div class="brand-name">  
-                <img src="images\WhatsApp Image 2024-06-13 at 17.16.02.jpeg" alt="Logo" class="logo">  
-                <div>
-                    <span class="orange">A</span>
-                    <span class="blue">TTARWIJ</span>  
-                    <span class="orange">A</span>
-                    <span class="blue">GENCY</span>
-                </div>
-                
-            </div>
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="index.html" id="accueil">Accueil</a></li>
-
-                </ul>
-            <div class="search-bar">
-                <input type="text" placeholder="Recherche...">
-            </div>
-                <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-            </nav>
-        </header>
-        <script>
-            // Ensure the page scrolls to the header on reload
-            window.onload = function() {
-                var header = document.getElementById('header');
-                header.scrollIntoView({behavior: 'smooth'});
-            };
-        </script>
-<h1>Nos Services</h1>
-
-<div class="service">
-    <h2>Centre d'Appel</h2>
-    <p>Nous offrons des services de centre d'appel pour gérer vos communications avec les clients de manière professionnelle et efficace. Que ce soit pour le support client, la prise de commandes, ou des campagnes de télémarketing, notre équipe est formée pour répondre à vos besoins spécifiques.</p>
-    <ul>
-        <li>support client 24/7, confirmation téléphonique, suivi personnalisé</li>
-        <li>Assistance multilingue</li>
-        <li>Suivi des appels et analyse des données</li>
-        <li>Gestion des appels entrants et sortants</li>
-        <li>Réponse rapide et personnalisée</li>
-    </ul>
-</div>
-
-<div class="service">
-    <h2>Marketing Digital</h2>
-    <p>Boostez votre visibilité en ligne et atteignez vos objectifs commerciaux grâce à nos stratégies de marketing digital. Nous offrons des solutions sur mesure pour améliorer votre présence sur les réseaux sociaux, optimiser votre site pour les moteurs de recherche, et lancer des campagnes publicitaires efficaces.</p>
-    <ul>
-        <li>Marketing d’influence</li>
-        <li>Stratégie de contenu et gestion des réseaux sociaux</li>
-        <li>Publicité en ligne (Google Ads, Facebook Ads)</li>
-        <li>SEO (Optimisation pour les moteurs de recherche)</li>
-        <li>Marketing par courriel</li>
-        <li>Analyse des performances et rapports détaillés</li>
-    </ul>
-</div>
-
-<div class="service">
-    <h2>Ventes</h2>
-    <p>Augmentez vos revenus grâce à nos services de vente professionnels. Nous aidons à développer des stratégies de vente efficaces, à former vos équipes de vente, et à mettre en œuvre des processus qui améliorent la conversion et la fidélisation des clients.</p>
-    <ul>
-        <li>Prospection, ⁠Négociation et  ⁠Confirmation</li>
-        <li>Coordination des livraisons et mise en place de techniques de vente efficaces et adaptées</li>
-        <li>Formation et coaching des équipes de vente</li>
-        <li>Développement de stratégies de vente</li>
-        <li>Gestion des relations clients (CRM)</li>
-        <li>Analyse des données de vente</li>
-        <li>Techniques de vente avancées</li>
-    </ul>
-</div>
-
-<div class="service">
-    <h2>Création de Sites Web</h2>
-    <p>Faites briller votre entreprise en ligne avec un site web professionnel et attrayant. Nous concevons et développons des sites web sur mesure qui répondent à vos besoins spécifiques, tout en offrant une expérience utilisateur exceptionnelle.</p>
-    <ul>
-        <li>Conception web personnalisée</li>
-        <li>Développement de sites responsives</li>
-        <li>Intégration de systèmes de gestion de contenu (CMS)</li>
-        <li>Optimisation pour les moteurs de recherche (SEO)</li>
-        <li>Maintenance et mises à jour régulières</li>
-    </ul>
-</div>
-
-<div class="service">
-    <h2>Création de Contenu</h2>
-    <p>Attirez et engagez votre audience avec du contenu de haute qualité. Nos services de création de contenu incluent la rédaction de textes, la production de vidéos, la création de visuels, et bien plus encore, pour renforcer votre message et augmenter votre portée.</p>
-    <ul>
-        <li>Rédaction d'articles et de blogs</li>
-        <li>Shooting et photographie professionnelle</li>
-        <li>Création de vidéos et animations</li>
-        <li>Design graphique et création de visuels</li>
-        <li>Contenu pour les réseaux sociaux</li>
-        <li>Stratégie de contenu et planification éditoriale</li>
-    </ul>
-</div>
-    </div>
-    <div class="parent">
-        <button id="init" >
-            <img src="images/chatbot.png" alt="Chat Icon">
-        </button>
-    </div>
-    <div id="test">
-        <div class="child" id="chatbot">
-            <div class="header">
-                <div class="h-child">
-                    <img src="images/chatbot (1).png" alt="avatar" id="avatar">
+            <a href="index.html" class="brand-name-link">
+                <div class="brand-name">  
+                    <img src="images/WhatsApp Image 2024-06-13 at 17.16.02.jpeg" alt="Logo" class="logo">  
                     <div>
-                        <span class="name">Chatbot</span>
-                        <br>
-                        <span style="color:rgb(218, 138, 18)">online</span>
+                        <span class="orange">A</span>
+                        <span class="blue">TTARWIJ</span>  
+                        <span class="orange">A</span>
+                        <span class="blue">GENCY</span>
                     </div>
                 </div>
-                <div>
-                    <button class="refBtn"  onclick="closeChat()"><img src="images/retirer.png" alt="" ></button>
-                </div>
-            </div>
-            <div id="chat-box">
-            </div>
-            <div class="footer">
-                <span style="color: rgb(218, 138, 18);">powered by @Attarwij Agency </span>
-            </div>
+            </a>
+        </header>
+    </div>
+    
+
+    <h1>Nos Services</h1>
+
+    <div class="services">
+        <div class="service">
+            <h2>Centre d'Appel</h2>
+            <p>Nous offrons des services de centre d'appel pour gérer vos communications avec les clients de manière professionnelle et efficace. Que ce soit pour le support client, la prise de commandes, ou des campagnes de télémarketing, notre équipe est formée pour répondre à vos besoins spécifiques.</p>
+            <ul>
+                <li>Support client 24/7</li>
+                <li>Assistance multilingue</li>
+                <li>Suivi des appels et analyse des données</li>
+                <li>Gestion des appels entrants et sortants</li>
+                <li>Réponse rapide et personnalisée</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h2>Marketing Digital</h2>
+            <p>Boostez votre visibilité en ligne et atteignez vos objectifs commerciaux grâce à nos stratégies de marketing digital. Nous offrons des solutions sur mesure pour améliorer votre présence sur les réseaux sociaux, optimiser votre site pour les moteurs de recherche, et lancer des campagnes publicitaires efficaces.</p>
+            <ul>
+                <li>Marketing d’influence</li>
+                <li>Stratégie de contenu et gestion des réseaux sociaux</li>
+                <li>Publicité en ligne (Google Ads, Facebook Ads)</li>
+                <li>SEO (Optimisation pour les moteurs de recherche)</li>
+                <li>Marketing par courriel</li>
+                <li>Analyse des performances et rapports détaillés</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h2>Ventes</h2>
+            <p>Augmentez vos revenus grâce à nos services de vente professionnels. Nous aidons à développer des stratégies de vente efficaces, à former vos équipes de vente, et à mettre en œuvre des processus qui améliorent la conversion et la fidélisation des clients.</p>
+            <ul>
+                <li>Prospection, Négociation et Confirmation</li>
+                <li>Coordination des livraisons et mise en place de techniques de vente efficaces</li>
+                <li>Formation et coaching des équipes de vente</li>
+                <li>Développement de stratégies de vente</li>
+                <li>Gestion des relations clients (CRM)</li>
+                <li>Analyse des données de vente</li>
+                <li>Techniques de vente avancées</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h2>Création de Sites Web</h2>
+            <p>Faites briller votre entreprise en ligne avec un site web professionnel et attrayant. Nous concevons et développons des sites web sur mesure qui répondent à vos besoins spécifiques, tout en offrant une expérience utilisateur exceptionnelle.</p>
+            <ul>
+                <li>Conception web personnalisée</li>
+                <li>Développement de sites responsives</li>
+                <li>Intégration de systèmes de gestion de contenu (CMS)</li>
+                <li>Optimisation pour les moteurs de recherche (SEO)</li>
+                <li>Maintenance et mises à jour régulières</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h2>Création de Contenu</h2>
+            <p>Attirez et engagez votre audience avec du contenu de haute qualité. Nos services de création de contenu incluent la rédaction de textes, la production de vidéos, la création de visuels, et bien plus encore, pour renforcer votre message et augmenter votre portée.</p>
+            <ul>
+                <li>Rédaction d'articles et de blogs</li>
+                <li>Shooting et photographie professionnelle</li>
+                <li>Création de vidéos et animations</li>
+                <li>Design graphique et création de visuels</li>
+                <li>Contenu pour les réseaux sociaux</li>
+                <li>Stratégie de contenu et planification éditoriale</li>
+            </ul>
         </div>
     </div>
-
-<script src="index.js"></script>
-<script>
-    function toggleMenu() {
-    const navLinks = document.querySelector('.nav-links');
-    navLinks.classList.toggle('active');
-    document.body.classList.toggle('no-scroll');
-}
-
-    document.querySelectorAll('.nav-links a').forEach(link => {
-    link.addEventListener('click', () => {
-        const navLinks = document.querySelector('.nav-links');
-        if (navLinks.classList.contains('active')) {
-            navLinks.classList.remove('active');
-            document.body.classList.remove('no-scroll');
-        }
-    });
-});
-
-    function toggleSearch() {
-        const searchBar = document.querySelector('.search-bar input');
-        searchBar.classList.toggle('active');
-    }
-</script>
 </body>
 </html>
