--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             </nav>   
         </header>
         <div class="background-container">
+            <video autoplay muted loop id="background-video">
+                <source src="images/video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             <div class="overlay">
                 <section id="home">
                     <h1><span class="orange">A</span><span class="blue">TTARWIJ</span>  <span class="orange">A</span><span class="blue">GENCY</span></h1>
@@ -56,7 +60,8 @@
                        Des idées audacieuses, une exécution impeccable - découvrez comment nous redéfinissons les normes du succès numérique.</p>
                 </section>
             </div>
-        </div>    
+        </div>
+          
     </div>    
     <section id="travail">
         <div class="background-container1">   
@@ -72,36 +77,43 @@
                 </div>
             </div>
         </div>
-        <section id="servicee">
-            <h1 class="services-title">Services</h1>
-            <section id="services"> 
-                <section class="services full-width-section"> 
-                    <div class="service">
-                        <img src="images/call.png" alt="contact Icon">
-                        <h2>centre d'appel <br>24/7</h2>
-                    </div>
-                    <div class="service">
-                        <img src="images/marketing digitale.png" alt="Marketing Digitale Icon">
-                        <h2>Marketing Digital</h2>
-                    </div>
-                    <div class="service">
-                        <img src="images/vente.png" alt="Vente Icon">
-                        <h2>Vente</h2>
-                    </div>
-                    <div class="service">
-                        <img src="images/création siteweb.png" alt="Création Siteweb Icon">
-                        <h2>Création <br>Siteweb</h2>
-                    </div>
-                    <div class="service">
-                        <img src="images/création de contenu.png" alt="Création de Contenu Icon">
-                        <h2>Création <br>de Contenu</h2>
-                    </div>
-                    <div class="learn-more-container">
-                        <a href="services.html" class="learn-more-button">Savoir plus</a>
-                    </div>
-                </section>
+    </section>    
+    <section id="servicee">
+        <h1 class="services-title">Services</h1><br><br>
+        <section id="services">
+            <section class="services full-width-section">
+                <div class="service" onclick="showServiceDetails('Centre d\'appel 24/7')">
+                    <img src="images/call.png" alt="Contact Icon">
+                    <h2>Centre d'appel <br>24/7</h2>
+                </div>
+                <div class="service" onclick="showServiceDetails('Marketing Digital')">
+                    <img src="images/marketing digitale.png" alt="Marketing Digital Icon">
+                    <h2>Marketing Digital</h2>
+                </div>
+                <div class="service" onclick="showServiceDetails('Vente')">
+                    <img src="images/vente.png" alt="Vente Icon">
+                    <h2>Vente</h2>
+                </div>
+                <div class="service" onclick="showServiceDetails('Création Siteweb')">
+                    <img src="images/création siteweb.png" alt="Création Siteweb Icon">
+                    <h2>Création <br>Siteweb</h2>
+                </div>
+                <div class="service" onclick="showServiceDetails('Création de Contenu')">
+                    <img src="images/création de contenu.png" alt="Création de Contenu Icon">
+                    <h2>Création <br>de Contenu</h2>
+                </div>
+                <div class="learn-more-container">
+                    <a href="services.html" class="learn-more-button">Savoir plus</a>
+                </div>
             </section>
-        </section>        
+        </section>
+    </section>
+
+    <script>
+        function showServiceDetails(serviceName) {
+            alert("You clicked on " + serviceName);
+        }
+    </script>  
         <section id="connecte" class="full-width-section">
             <div class="stay-connected-text">
                 <section id="contact">
