--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </nav>   
         </header>
         <div class="background-container">
-            <video autoplay muted loop id="background-video">
+            <video autoplay muted loop playsinline id="background-video">
                 <source src="images/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -60,7 +60,9 @@
                        Des idées audacieuses, une exécution impeccable - découvrez comment nous redéfinissons les normes du succès numérique.</p>
                 </section>
             </div>
+            <img src="images/Image 13.png" alt="Background" class="fallback-image">
         </div>
+        
           
     </div>    
     <section id="travail">
